Adiciona imagem do Jake

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 fullstack com especialidade em Infraestrutura de TI! </p>
             <a href="https://instagram.com/gabrielalvss_">Instagram</a>
             <a href="https://github.com/Loukyoe">Github</a>
+            <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
     <footer></footer>
 </body>
