--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header></header>
     <main>
         <h1>Eleve seu negócio digital a outro nível 
             <strong>com um Front-end de qualidade!</strong></h1>
-            <p>Olá! Sou Gabriela Fernandes, desenvolvedora 
-                fullstack com especialidade em Infraestrutura de TI! </p>
+            <p>Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
             <a href="https://instagram.com/gabrielalvss_">Instagram</a>
             <a href="https://github.com/Loukyoe">Github</a>
             <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
