--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
     <header></header>
     <main>
-        <h1>Eleve seu negócio digital a outro nível 
-            <strong>com um Front-end de qualidade!</strong></h1>
+        <h1>Conheça o trabalho de quem
+            <span>ama o que faz!</span></h1>
             <p>Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
+            <p> 
+    
+            </p>
             <a href="https://instagram.com/gabrielalvss_">Instagram</a>
             <a href="https://github.com/Loukyoe">Github</a>
+            <p> </p>
             <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
     <footer></footer>
