--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header></header>
     <main>
         <h1>Conheça o trabalho de quem
-            <span>ama o que faz!</span></h1>
+            <strong class="titulo-destaque">ama o que faz!</strong></h1>
             <p>Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
             <p> 
     
