Aprimora alinhamento e fontes

--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>Conheça o trabalho de quem
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Conheça o trabalho de quem
             <strong class="titulo-destaque">ama o que faz!</strong></h1>
-            <p>Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
-            <p> 
-    
-            </p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
             <a href="https://instagram.com/gabrielalvss_">Instagram</a>
             <a href="https://github.com/Loukyoe">Github</a>
-            <p> </p>
+        </section>
             <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
     <footer></footer>
