--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <h1 class="apresentacao__conteudo__titulo">Conheça o trabalho de quem
             <strong class="titulo-destaque">ama o que faz!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
-            <a href="https://instagram.com/gabrielalvss_">Instagram</a>
-            <a href="https://github.com/Loukyoe">Github</a>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link"href="https://instagram.com/gabrielalvss_">Instagram</a>
+                <a class="apresentacao__links__link"href="https://github.com/Loukyoe">Github</a>
+            </div>
         </section>
             <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
