Adiciona mais estilos e botões

--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
             <p class="apresentacao__conteudo__texto">Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link"href="https://instagram.com/gabrielalvss_">Instagram</a>
-                <a class="apresentacao__links__link"href="https://github.com/Loukyoe">Github</a>
+                <a class="apresentacao__links__link"href="https://instagram.com/gabrielalvss_">
+                    <img class= "apresentacao__links__link__icon" src="./assets/instagram.png">
+                    Instagram
+                </a>
+                <a class="apresentacao__links__link"href="https://github.com/Loukyoe">
+                    <img class= "apresentacao__links__link__icon" src="./assets/git-hub.png">
+                    Github
+                </a>
             </div>
         </section>
-            <img src="icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
+        <img class="apresentacao__imagem"src="./assets/icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
     <footer></footer>
 </body>
