--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="cabecalho">
+        <nav class="cabecalho__menu">
+            <a class="cabecalho__menu__link"href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+        </nav>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Conheça o trabalho de quem
@@ -28,6 +33,8 @@
         </section>
         <img class="apresentacao__imagem"src="./assets/icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Gabriela Fernandes</p>
+    </footer>
 </body>
 </html>
