Adiciona página de currículo e sobre mim

--- a/curriculo.html
+++ b/curriculo.html
@@ -15,7 +15,21 @@
         </nav>
     </header>
     <main class="apresentacao">
-        
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Estudos</h1>
+            <div class=" apresentacao__links">
+                <ul class="apresentacao__links__cursos">
+                    <li>Formação "Começando em Devops" - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">Terminal:</strong> aprenda comandos para executar tarefas - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">C:</strong> conhecendo a Linguagem das Linguagens - Alura Cursos </li>
+                    <li><strong class="apresentacao__links__cursos__destaque">SQLite online:</strong> conhecendo instruções SQL - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">MySQL:</strong> conhecendo a ferramenta - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">Redes:</strong> dos conceitos iniciais à criação de uma intranet - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">Machine Learning:</strong> classificação com SKLearn - Alura Cursos</li>
+                    <li><strong class="apresentacao__links__cursos__destaque">Java:</strong> aplicando a Orientação a Objetos - Alura Cursos</li>
+            </ul>
+            </div>
+            </section>
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Gabriela Fernandes</p>
