Envio do projeto final

--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
                     <img class= "apresentacao__links__link__icon" src="./assets/git-hub.png">
                     Github
                 </a>
+                <a class="apresentacao__links__link"href="www.linkedin.com/in/gabriela-fernandes-187a412b8">
+                    <img class= "apresentacao__links__link__icon" src="./assets/linkedin.png">
+                    Linkedin
+                </a>
             </div>
         </section>
-        <img class="apresentacao__imagem"src="./assets/icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
+        <img class="apresentacao__imagem"src="./assets/cake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Gabriela Fernandes</p>
