Atualização de responsividade

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <p class="apresentacao__conteudo__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam facilisis fermentum varius. Sed faucibus nibh urna, in sagittis libero tempus quis. Vivamus in tincidunt ligula. Nulla nec sodales lectus, in iaculis neque. Nullam varius augue eget dictum sodales. In rutrum est ut laoreet gravida. Duis fermentum, dui vel efficitur interdum, dui tortor sollicitudin eros, a accumsan dolor lorem nec ante. Nunc consectetur, augue eu placerat malesuada, dolor leo dapibus nulla, at molestie ipsum urna vitae nibh. Aliquam ultrices felis nulla.</p>
             <p class="apresentacao__conteudo__texto">Donec et nisl at dolor facilisis rutrum sit amet vitae erat. Vivamus congue mollis dolor, sed interdum nibh posuere sed. Mauris id nulla vitae est egestas placerat. Pellentesque volutpat varius ex ut sodales. Sed vel consequat nibh, eget ultrices velit. Donec volutpat erat ut dignissim molestie. Suspendisse ac molestie leo. Vestibulum ultricies nunc nunc, non sagittis dui maximus at. Sed blandit hendrerit ipsum eu pellentesque. Duis fermentum pretium consequat. Pellentesque nec ornare justo, sed suscipit sapien. Sed at auctor ex.</p>
         </section>
-        <img class="apresentacao__imagem"src="./assets/icon-jake.jpg" alt="Personagem Jake de Hora de Aventura comendo pão">
+        <img class="apresentacao__imagem"src="./assets/cake.jpg" alt="Personagem Cake de Hora de Aventura comendo pão">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Gabriela Fernandes</p>
