--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Conheça o trabalho de quem
             <strong class="titulo-destaque">ama o que faz!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Infraestrutura de TI! </p>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Gabriela Fernandes, estudante de ADS com especialidade em Segurança da Informação! </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link"href="https://instagram.com/gabrielalvss_">
+                <a class="apresentacao__links__navegacao"href="https://instagram.com/gabrielalvss_">
                     <img class= "apresentacao__links__link__icon" src="./assets/instagram.png">
                     Instagram
                 </a>
-                <a class="apresentacao__links__link"href="https://github.com/Loukyoe">
+                <a class="apresentacao__links__navegacao"href="https://github.com/Loukyoe">
                     <img class= "apresentacao__links__link__icon" src="./assets/git-hub.png">
                     Github
                 </a>
-                <a class="apresentacao__links__link"href="www.linkedin.com/in/gabriela-fernandes-187a412b8">
+                <a class="apresentacao__links__navegacao"href="www.linkedin.com/in/gabriela-fernandes-187a412b8">
                     <img class= "apresentacao__links__link__icon" src="./assets/linkedin.png">
                     Linkedin
                 </a>
